# Minnal

./: .gitignore  CONTEXT.md  Cargo.toml  LICENSE  README.md  plan.md  progress.md
.github/workflows/: ci.yml
apps/: Minnal.MauiSpike.slnx  README.md
apps/Minnal.AppModel/: Library.fs  Minnal.AppModel.fsproj
apps/Minnal.AppModel.Tests/: Minnal.AppModel.Tests.fsproj  Program.fs
apps/Minnal.Maui/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Minnal.Maui.csproj  TrimmerRoots.xml
apps/Minnal.Maui/Components/: _Imports.razor
apps/Minnal.Maui/Components/Pages/: Home.razor
apps/Minnal.Maui/Resources/Raw/ai/: README.md
apps/Minnal.Maui/Services/: AiService.cs  HttpExecutionService.cs
apps/Minnal.Maui/wwwroot/: app.css  index.html
crates/minnal-ai/: Cargo.toml
crates/minnal-ai/src/: lib.rs
crates/minnal-core/: Cargo.toml
crates/minnal-core/src/: lib.rs
crates/minnal-export/: Cargo.toml
crates/minnal-export/src/: lib.rs
crates/minnal-hooks/: Cargo.toml
crates/minnal-hooks/src/: lib.rs
crates/minnal-store/: Cargo.toml
crates/minnal-store/src/: lib.rs
crates/minnal-ui/: Cargo.toml
crates/minnal-ui/src/: lib.rs
design/Minnal-ui/: V001.md
design/Minnal-ui/stitch-reference/: MINNAL_UI_UX_REVIEW.md  code.html
design/Minnal-ui/stitch-reference/stitch_minnal_ai_native_api_workspace (1)/: DESIGN.md  code.html
design/Minnal-ui/stitch-reference/stitch_minnal_ai_native_api_workspace2/: code.html
docs/: CLAUDE.md  progress.md  unittest.md
docs/design/Minnal-ui/stitch-reference/stitch_minnal_ai_native_api_workspace2/: DESIGN.md
docs/sessions/: phase-0-progress.md
files/: CLAUDE.md  CONTEXT.md  Minnal.md  phase-0-and-0.5.md  plan.md
files/design/Minnal-store/: V001.md
sessions/: phase-0-progress.md
