[workspace]
members = [
    "crates/minnal-core",
    "crates/minnal-store",
    "crates/minnal-ai",
    "crates/minnal-hooks",
    "crates/minnal-export",
    "crates/minnal-ui",
]
exclude = ["spikes/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Arun Balakrishnan <arun.balakrishnan@live.com>"]
repository = "https://github.com/arun6202/Minnal"
rust-version = "1.80"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
