[package]
name = "minnal-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Model router, inference backend, prompt engine"

[dependencies]
minnal-store = { path = "../minnal-store" }

[lints]
workspace = true
