[package]
name = "minnal-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Wasmtime sandbox, hook lifecycle, capability grants"

[dependencies]
minnal-core = { path = "../minnal-core" }
minnal-ai = { path = "../minnal-ai" }

[lints]
workspace = true
