[package]
name = "minnal-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Persistence layer: content-addressed SQLite and vector index"

[dependencies]

[lints]
workspace = true
